-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.6.0, Lustre 2.7.0
-
3
-
16291
We are using one MGT to mange two file systems which names are 'lustre' and 'lustre2T'. However, it is impossible to mount their MDTs on different servers because parsing of MGS llog fails. We found the failure reason is that file systen 'lustre2T' has invalid records which should actually be the record of 'lustre'.
This problem can be reproduced easily by following commands:
mkfs.lustre --mgs --reformat /dev/sdb1;
mkfs.lustre --fsname lustre --mdt --reformat --mgsnode=192.168.3.122@tcp --index=0 /dev/sdb2;
mkfs.lustre --fsname lustre2T --mdt --reformat --mgsnode=192.168.3.122@tcp --index=0 /dev/sdb3;
mount -t lustre /dev/sdb1 /mnt/mgs;
mount -t lustre /dev/sdb2 /mnt/mdt-lustre;
mount -t lustre /dev/sdb3 /mnt/mdt-lustre2T;
lctl conf_param lustre.quota.ost=ug;
mount -t ldiskfs /dev/sdb1 /mnt/ldiskfs;
llog_reader /mnt/ldiskfs/CONFIGS/lustre2T-MDT0000 | grep quota.ost;
The output of the last command is:
#10 (224)marker 8 (flags=0x01, v2.5.25.0) lustre 'quota.ost' Mon Oct 27 21:26:23 2014-
#11 (088)param 0:lustre 1:quota.ost=ug
#12 (224)marker 8 (flags=0x02, v2.5.25.0) lustre 'quota.ost' Mon Oct 27 21:26:23 2014-